# lz4

./: .cirrus.yml  .dir-locals.el  .gitattributes  .gitignore  .travis.ylm  .travis.yml  CNAME  INSTALL  LICENSE  LZ4 Streaming Format.odt  LZ4.c  LZ4.h  LZ4_Frame_Format.html  LZ4_Framing_Format.html  LZ4_Streaming_Format.odt  Makefile  Makefile.inc  NEWS  Package.swift  README.md  READMEDJ.MD  Vagrantfile  a.txt  appveyor.yml  bench.c  bench.h  circle.yml  fullbench.c  fuzzer.c  index.html  library.json  lz4.1  lz4.c  lz4.h  lz4Frame.h  lz4_Block_format.html  lz4_Block_format.md  lz4_Frame_format.html  lz4_Frame_format.md  lz4_block_format.txt  (+19 more)
.circleci/: config.yml
.circleci/images/primary/: Dockerfile
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: README.md  ci.yml  scorecard.yml
cmake/: CMakeLists.txt  release_COPYING.txt
cmake/pack/: CMakeLists.txt
cmake_unofficial/: CMakeLists.txt
contrib/cmake_unofficial/: .gitignore  CMakeLists.txt
contrib/djgpp/: Makefile  README.MD
contrib/gen_manual/: Makefile  README.md  gen-lz4-manual.sh  gen_manual.cpp
contrib/meson/: GetLz4LibraryVersion.py  InstallSymlink.py  README.md  meson.build  meson_options.txt
contrib/meson/lib/: meson.build
contrib/meson/meson/: meson.build
contrib/meson/meson/contrib/gen_manual/: meson.build
contrib/meson/meson/examples/: meson.build
contrib/meson/meson/lib/: meson.build
contrib/meson/meson/programs/: meson.build
contrib/meson/meson/tests/: meson.build
contrib/meson/programs/: meson.build
contrib/meson/tests/: meson.build
contrib/snap/: snapcraft.yaml
csv/: benchmark-silesia-1000mbps-offline-compression.csv  benchmark-silesia-1000mbps.csv  sample1.csv  sample2.csv
debian/: changelog  control  copyright  lz4-dev.install  lz4.install  rules
doc/: lz4_Block_format.md  lz4_Frame_format.md  lz4_manual.html  lz4frame_manual.html
examples/: .gitignore  HCStreaming_ringBuffer.c  Makefile  README.md  argPerformanceTesting.c  basics.c  bench_functions.c  blockStreaming_doubleBuffer.c  blockStreaming_doubleBuffer.md  blockStreaming_lineByLine.c  blockStreaming_lineByLine.md  blockStreaming_ringBuffer.c  compressFunctions  compress_functions.c  dictionaryRandomAccess.c  dictionaryRandomAccess.md  fileCompress.c  frameCompress.c  printVersion.c  simple_buffer.c  streaming_api_basics.md
include/: module.modulemap
js/: bootstrap-patch.css  chartselector.js  csvToArray.v2.1.js  rendercharts.js  strapdown-hook.js
lib/: LICENSE  Makefile  README.md  liblz4.pc  liblz4.pc.in  liblz4.so.1  liblz4.so.1.4.1  lz4.c  lz4.h  lz4_decompress_x86_64_asm.S  lz4file.c  lz4file.h  lz4frame.c  lz4frame.h  lz4frame_static.h  lz4hc.c  lz4hc.h  lz4opt.h  xxhash.c  xxhash.h
lib/dll/: Makefile  README.md  fullbench-dll.vcxproj
lib/dll/example/: Makefile  README.md
lib/dll/fullbench-dll/: Makefile  fullbench-dll.vcxproj
ossfuzz/: .gitignore  Makefile  compress_frame_fuzzer.c  compress_fuzzer.c  compress_fuzzer.cc  compress_hc_fuzzer.c  decompress_frame_fuzzer.c  decompress_fuzzer.c  decompress_fuzzer.cc  fuzz.h  fuzz_data_producer.c  fuzz_data_producer.h  fuzz_helpers.h  ossfuzz.sh  round_trip_frame_fuzzer.c  round_trip_frame_uncompressed_fuzzer.c  round_trip_fuzzer.c  round_trip_hc_fuzzer.c  round_trip_stream_fuzzer.c  testinput.h  travisoss.sh
programs/: .gitignore  Makefile  README.md  bench.c  bench.h  datagen.c  datagen.h  datagencli.c  frametest.c  fullbench.c  fuzzer.c  lorem.c  lorem.h  lz4.1  lz4.1.md  lz4c.1  lz4cat.1  lz4cli.c  lz4conf.h  lz4io.c  lz4io.h  lz4iomt.cpp  lz4iomt.h  platform.h  threadpool.c  threadpool.h  timefn.c  timefn.h  util.c  util.h  xxhash.c  xxhash.h
test/: Makefile  test-lz4-versions.py
tests/: .gitignore  Makefile  README.md  abiTest.c  checkFrame.c  checkTag.c  datagencli.c  decompress-partial-usingDict.c  decompress-partial.c  emscripten-tests.c  fasttest.c  framebench.c  frametest.c  freestanding.c  fullbench.c  fuzzer.c  loremOut.c  roundTripTest.c  test-lz4-abi.py  test-lz4-basic.sh  test-lz4-dict.sh  test-lz4-fast-hugefile.sh  test-lz4-list.py  test-lz4-multiple-legacy.sh  test-lz4-speed.py  test-lz4-versions.py  test-lz4hc-hugefile.sh  test_custom_block_sizes.sh  test_install.sh  unicode_lint.sh
tests/cmake/: CMakeLists.txt
versionsTest/: test-lz4-versions.py
visual/: .gitignore  README.md
visual/2012/: lz4.sln
visual/2012/datagen/: datagen.vcxproj
visual/2012/frametest/: frametest.vcxproj
visual/2012/fullbench/: fullbench.vcxproj
visual/2012/fuzzer/: fuzzer.vcxproj
visual/2012/lz4/: liblz4.vcxproj  liblz4.vcxproj.filters  lz4.vcxproj
visual/2013/datagen/: datagen.vcxproj
visual/2013/frametest/: frametest.vcxproj
visual/2013/fullbench/: fullbench.vcxproj
visual/2013/fuzzer/: fuzzer.vcxproj
visual/2013/lz4/: lz4.vcxproj
visual/VS2010/: lz4.sln
visual/VS2010/datagen/: datagen.vcxproj
visual/VS2010/frametest/: frametest.vcxproj
visual/VS2010/fullbench/: fullbench.vcxproj
visual/VS2010/fullbench-dll/: fullbench-dll.vcxproj
visual/VS2010/fuzzer/: fuzzer.vcxproj
visual/VS2010/liblz4/: liblz4.vcxproj
visual/VS2010/liblz4-dll/: liblz4-dll.vcxproj  lz4-dll.rc  lz4-dll.vcxproj
visual/VS2010/lz4/: lz4.vcxproj
visual/VS2010/lz4-dll/: lz4-dll.rc  lz4-dll.vcxproj
visual/VS2017/: lz4.sln
visual/VS2017/datagen/: datagen.vcxproj
visual/VS2017/frametest/: frametest.vcxproj
visual/VS2017/fullbench/: fullbench.vcxproj
visual/VS2017/fullbench-dll/: fullbench-dll.vcxproj
visual/VS2017/fuzzer/: fuzzer.vcxproj
visual/VS2017/liblz4/: liblz4.vcxproj
visual/VS2017/liblz4-dll/: liblz4-dll.vcxproj
visual/VS2019/datagen/: datagen.vcxproj
visual/VS2019/frametest/: frametest.vcxproj
visual/VS2019/fullbench/: fullbench.vcxproj
visual/VS2019/fullbench-dll/: fullbench-dll.vcxproj
visual/VS2019/fuzzer/: fuzzer.vcxproj
visual/VS2019/liblz4/: liblz4.vcxproj
visual/VS2019/liblz4-dll/: liblz4-dll.vcxproj
